--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar">
-        <img src="img/boa.png" alt="Logo" width="100" height="">
+        <img src="img/boa.png" alt="Logo" width="150" height="90">
         <div class="nav-links">
         </div>
     </nav>
@@ -23,38 +23,6 @@
                 <p>Organize os horários dos colaboradores de forma simples e prática.</p>
                 <button onclick="window.location.href='login.html'">Realize seu login</button>
             </div>
-        </div>
-    </div>
-
-    <!-- Modal de Login -->
-    <div id="login-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Login</h2>
-            <form id="login-form">
-                <label for="username">Usuário:</label>
-                <input type="text" id="username" required>
-                <label for="password">Senha:</label>
-                <input type="password" id="password" required>
-                <button type="submit">Entrar</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Modal de Cadastro -->
-    <div id="cadastro-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Cadastro</h2>
-            <form id="cadastro-form">
-                <label for="new-username">Usuário:</label>
-                <input type="text" id="new-username" required>
-                <label for="new-password">Senha:</label>
-                <input type="password" id="new-password" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" required>
-                <button type="submit">Cadastrar</button>
-            </form>
         </div>
     </div>
 
